# mupen64minus-core

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
projects/cmake/: CMakeLists.txt
projects/msvc/: mupen64plus-core.vcxproj  mupen64plus-core.vcxproj.filters
projects/unix/: Makefile
src/api/: frontend.c  m64p_config.h  m64p_types.h  vidext.c
src/device/controllers/paks/: biopak.c
src/main/: cheat.c  eventloop.c  lirc.c  main.c  savestates.c  sdl_key_converter.c  sdl_key_converter.h
src/osal/: files.h  files_macos.c  files_unix.c  files_win32.c
src/plugin/: plugin.c
